--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -660,6 +660,7 @@
     <string name="webview_error">Error occurred</string>
     <string name="prefs_category_about">About</string>
 
+    <string name="prefs_category_dev">Dev</string>
     <string name="actionbar_contacts">Back up contacts</string>
     <string name="actionbar_contacts_restore">Restore contacts</string>
     <string name="contacts_backup_button">Back up now</string>
